kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyrk-gateway
spec:
  selector:
    app: kyrk-gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
