kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
  labels:
    use-http01-solver: "true"
  name: kyrk-gateway
spec:
  tls:
    - hosts:
        - kyrk.guane.dev
      secretName: kyrk-gateway
  rules:
    - host: kyrk.guane.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kyrk-gateway
                port:
                  number: 80
